Fix container spacing

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -39,3 +39,10 @@ iframe {
     height: 250px;
   }
 }
+
+article .container {
+  padding: 0;
+}
+article .row {
+  margin: var(--ifm-spacing-vertical) calc(var(--ifm-spacing-horizontal) * -1);
+}
